--- a/package.json
+++ b/package.json
@@ -3,10 +3,6 @@
   "version": "1.0.0",
   "description": "Sink's Tools for CumLISP - lots of useful stuff considered out of scope of the stdlib",
   "main": "lib/index.js",
-  "scripts": {
-    "build": "flow-remove-types lib/ -d dist/",
-    "prepublish": "npm run build"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/yellowsink/clisp-stools.git"
@@ -18,7 +14,6 @@
   },
   "homepage": "https://github.com/yellowsink/clisp-stools#readme",
   "devDependencies": {
-    "flow-bin": "^0.168.0",
-    "flow-remove-types": "^2.168.0"
+    "typescript": "^4.5.4"
   }
 }
