--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "homepage": "https://github.com/yellowsink/clisp-stools#readme",
   "devDependencies": {
     "typescript": "^4.5.4"
+  },
+  "dependencies": {
+    "cumlisp": "^1.1.0"
   }
 }
