--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "clisp-stools",
   "version": "0.2.0",
   "description": "Sink's Tools for CumLISP - lots of useful stuff considered out of scope of the stdlib",
-  "main": "dist/initApi.js",
+  "main": "dist/index.js",
   "module": "dist/initApi.js",
   "types": "dist/initApi.d.ts",
   "repository": {
@@ -15,9 +15,9 @@
   "author": "Yellowsink",
   "license": "BSD-3-Clause",
   "devDependencies": {
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.5"
   },
   "dependencies": {
-    "cumlisp": "^1.1.0"
+    "cumlisp": "^1.3.0"
   }
 }
